[gd_scene load_steps=2 format=3 uid="uid://drgfdoyqhj6jb"]

[ext_resource type="Script" path="res://src/editor/param_editor.gd" id="1_tmfp5"]

[node name="ParamEditor" type="VBoxContainer"]
offset_right = 184.0
offset_bottom = 43.0
script = ExtResource("1_tmfp5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "RESET"

[node name="NameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ParamName:"

[node name="ValueLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "%VALUE%"

[node name="Slider" type="HSlider" parent="."]
layout_mode = 2

[connection signal="button_up" from="HBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
